@@ -86,11 +86,11 @@ turret-pod-flame2=Provides defense flame thrower Tier-2 equipment for vehicles. 
 
 [mod-setting-name]
 zd-AllowChangeAmmo=Allow to change ammo type automatically
-zd-PlayerArmorSupport=Support character armors (cheater!)
+zd-PlayerArmorSupport=Support character armors
 
 [mod-setting-description]
 zd-AllowChangeAmmo=Once selected ammo type can be automatically changed when out of stock.
-zd-PlayerArmorSupport=Turn cheater mode on (character armor support for turret pods). Wanna be Commando?
+zd-PlayerArmorSupport=Turn on support of character armor for turret pods.
 
 [message]
 zd-unloadedPods=__1__ pods' ammo unloaded in __2__ vehicles.
