@@ -1,8 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.6
-Date: 2025-10-22
+Date: 2025-10-?
   Changes:
     - Added battery charge percentage indicator for unoccupied vehicle on hovering over vehicle.
+    - Character armor support.
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.5
 Date: 2025-10-16
